--- a/Heart-up/Base.lproj/Main.storyboard
+++ b/Heart-up/Base.lproj/Main.storyboard
@@ -171,33 +171,14 @@
                     <view key="view" contentMode="scaleToFill" id="3tE-hc-PWZ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="0vV-FP-J7W">
-                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Wkv-lQ-Ris">
-                                    <size key="itemSize" width="50" height="50"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells/>
-                            </collectionView>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="0vV-FP-J7W" firstAttribute="leading" secondItem="oDL-OU-0CU" secondAttribute="leading" id="R2F-ap-3gR"/>
-                            <constraint firstItem="0vV-FP-J7W" firstAttribute="top" secondItem="oDL-OU-0CU" secondAttribute="top" id="gX0-Bj-8zp"/>
-                            <constraint firstItem="0vV-FP-J7W" firstAttribute="trailing" secondItem="oDL-OU-0CU" secondAttribute="trailing" id="mUl-Mp-17f"/>
-                            <constraint firstItem="0vV-FP-J7W" firstAttribute="bottom" secondItem="oDL-OU-0CU" secondAttribute="bottom" id="oG6-Qx-uaj"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="oDL-OU-0CU"/>
                     </view>
                     <navigationItem key="navigationItem" id="EgO-MW-Fkd"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HtW-W0-JhW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3718" y="2633"/>
+            <point key="canvasLocation" x="3717.5999999999999" y="2632.5337331334335"/>
         </scene>
         <!--コメント履歴-->
         <scene sceneID="L1a-aZ-6mv">
